Splitting the application into consumer and producer apps

--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,64 @@
 buildscript {
-	ext {
-		kotlinVersion = '1.1.4'
-		springBootVersion = '1.5.6.RELEASE'
+    ext {
+        kotlinVersion = '1.1.4'
+        springBootVersion = '1.5.6.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven { url 'http://repo.spring.io/plugins-release' }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
+    }
+}
+
+subprojects {
+
+	apply plugin: 'kotlin'
+	apply plugin: 'kotlin-spring'
+	apply plugin: 'eclipse'
+	apply plugin: 'idea'
+	apply plugin: 'propdeps'
+	apply plugin: 'propdeps-idea'
+	apply plugin: 'org.springframework.boot'
+
+	version = '0.0.1-SNAPSHOT'
+	sourceCompatibility = 1.8
+
+	compileKotlin {
+		kotlinOptions.jvmTarget = "1.8"
 	}
+	compileTestKotlin {
+		kotlinOptions.jvmTarget = "1.8"
+	}
+
 	repositories {
 		mavenCentral()
-        maven { url 'http://repo.spring.io/plugins-release' }
 	}
+
+
+	ext {
+		springCloudVersion = 'Dalston.SR3'
+	}
+
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-        classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
+		compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+		compile('org.springframework.kafka:spring-kafka')
+		compile('org.springframework.boot:spring-boot-starter-web')
+		compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
+		compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+		compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0")
+		optional("org.springframework.boot:spring-boot-configuration-processor")
+		testCompile('org.springframework.boot:spring-boot-starter-test')
 	}
-}
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'propdeps'
-apply plugin: 'propdeps-idea'
-apply plugin: 'org.springframework.boot'
-
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-compileKotlin {
-	kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-	kotlinOptions.jvmTarget = "1.8"
-}
-
-repositories {
-	mavenCentral()
-}
-
-
-ext {
-	springCloudVersion = 'Dalston.SR3'
-}
-
-dependencies {
-	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-	compile('org.springframework.kafka:spring-kafka')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
-	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
-    compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0")
-    optional("org.springframework.boot:spring-boot-configuration-processor")
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	dependencyManagement {
+		imports {
+			mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		}
 	}
-}
 
-compileJava.dependsOn(processResources)
+}
