--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext {
-        kotlinVersion = '1.1.4'
-        springBootVersion = '1.5.6.RELEASE'
+        kotlinVersion = '1.1.4-3'
+        springBootVersion = '2.0.0.M3'
+        springCloudVersion = 'Finchley.M2'
     }
     repositories {
         mavenCentral()
@@ -17,48 +18,48 @@ buildscript {
 
 subprojects {
 
-	apply plugin: 'kotlin'
-	apply plugin: 'kotlin-spring'
-	apply plugin: 'eclipse'
-	apply plugin: 'idea'
-	apply plugin: 'propdeps'
-	apply plugin: 'propdeps-idea'
-	apply plugin: 'org.springframework.boot'
+    apply plugin: 'kotlin'
+    apply plugin: 'kotlin-spring'
+    apply plugin: 'eclipse'
+    apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'propdeps'
+    apply plugin: 'propdeps-maven'
+    apply plugin: 'propdeps-idea'
+    apply plugin: 'propdeps-eclipse'
 
-	version = '0.0.1-SNAPSHOT'
-	sourceCompatibility = 1.8
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = 1.8
 
-	compileKotlin {
-		kotlinOptions.jvmTarget = "1.8"
-	}
-	compileTestKotlin {
-		kotlinOptions.jvmTarget = "1.8"
-	}
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
 
-	repositories {
-		mavenCentral()
-	}
+    repositories {
+        mavenCentral()
+        maven { url 'https://repo.spring.io/libs-milestone' }
+    }
 
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:$springBootVersion")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion")
+        }
+    }
 
-	ext {
-		springCloudVersion = 'Dalston.SR3'
-	}
-
-	dependencies {
-		compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-		compile('org.springframework.kafka:spring-kafka')
-		compile('org.springframework.boot:spring-boot-starter-web')
-		compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
-		compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
-		compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0")
-		optional("org.springframework.boot:spring-boot-configuration-processor")
-		testCompile('org.springframework.boot:spring-boot-starter-test')
-	}
-
-	dependencyManagement {
-		imports {
-			mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-		}
-	}
+    dependencies {
+        compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+        compile('org.springframework.kafka:spring-kafka')
+        compile('org.springframework.boot:spring-boot-starter-web')
+        compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
+        compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+        compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0")
+        optional "org.springframework.boot:spring-boot-configuration-processor"
+        testCompile('org.springframework.boot:spring-boot-starter-test')
+    }
 
 }
