--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
         kotlinVersion = '1.1.4-3'
-        springBootVersion = '2.0.0.M3'
-        springCloudVersion = 'Finchley.M2'
+        springBootVersion = '2.0.0.M4'
+        springCloudVersion = 'Camden.SR7'
     }
     repositories {
         mavenCentral()
@@ -17,7 +17,6 @@ buildscript {
 }
 
 subprojects {
-
     apply plugin: 'kotlin'
     apply plugin: 'kotlin-spring'
     apply plugin: 'eclipse'
@@ -52,12 +51,13 @@ subprojects {
     }
 
     dependencies {
-        compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
         compile('org.springframework.kafka:spring-kafka')
+        compile('org.springframework.retry:spring-retry')
         compile('org.springframework.boot:spring-boot-starter-web')
+        compile('org.springframework.boot:spring-boot-starter-jdbc')
         compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
         compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
-        compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0")
+        compile("com.fasterxml.jackson.module:jackson-module-kotlin")
         optional "org.springframework.boot:spring-boot-configuration-processor"
         testCompile('org.springframework.boot:spring-boot-starter-test')
     }
